Update Änderungen an den Rängen, der Teamseite, des Regelwerkes vorgenommen und aktuallisiert

--- a/infos.html
+++ b/infos.html
@@ -216,59 +216,75 @@
       <div class="infos-box" id="regeln">
         <h2>📜 Regeln</h2>
         <div class="regeln-block">
-          <b>1.1 Allgemeines</b><br>
-          §1 → Zweitaccounts sind nur für die Nutzung einer Webcam erlaubt.<br>
-          §2 → Anweisungen vom Serverteam sind Folge zu leisten! Blockieren oder Ignorieren ist keine Option.<br>
-          §3 → Unpingbare Zeichen, obszönes, pornographisches, Rassistisches, Religion feindliches, Homophobes oder Sexistisches Verhalten sowie Profilbilder oder Bios sind untersagt.<br>
-          §4 → Das Werben für andere Discord Server oder Plattformen im Benutzernamen, Profilbildern ist verboten.<br>
-          §5 → Private Daten wie Telefonnummern, Adressen, Passwörter und Ähnlichem dürfen nicht öffentlich ausgetauscht werden. (Ein Serverteammitglied wird dich niemals nach sensiblen Daten fragen.)<br>
-          §6 → Jeder Hack- und/oder DDoS-Angriff gegen diesen Server ist strafbar und wird strafrechtlich verfolgt.<br>
+          <b>Auf diesem Discord-Server gelten die <a href="https://discord.com/terms" target="_blank">Terms of Service</a>.</b><br>
+          Mit dem Betreten des Discord-Servers, akzeptierst du automatisch die Regeln und bist für das Handeln auf deinem Account eigenverantwortlich.
         </div>
         <div class="regeln-block">
-          <b>1.2 Voicechannel</b><br>
-          §7 → Störung der Kommunikation, Belästigung und jegliches Bedrohen von Nutzern ist untersagt.<br>
-          §8 → Das Abspielen von Musik (außer mit dem dafür vorgesehenem Bot) und Geräuschen ist untersagt.<br>
-          §9 → Das dauerhafte "Switchen" von Channel zu Channel ist untersagt (Channelhopping)!<br>
-          §10→ Das Aufzeichnen von Supportgesprächen ist verboten und kann Strafrechtlich verfolgt werden!<br>
-        </div>
-        <div class="regeln-block">
-          <b>1.2 Tickets</b><br>
-          §1 → Das pingen von Teamlern ist untersagt!<br>
-          §2 → Das öffnen eines Tickets ist ohne triftigen Grund zu unterlassen.<br>
-          §3 → Private Angelegenheiten sollten nicht in ein Ticket eingebracht werden.<br>
-        </div>
-        <div class="regeln-block">
-          <b>Ingame Regeln</b><br>
-          <b>2.1 Spielverhalten</b><br>
-          §1 → Das Nutzen von Mods und Hacks, die dir einen Spielvorteil gegenüber anderen Mitspielern verschaffen, ist verboten! (X-Ray, Fly, Fullbright, usw).<br>
-          §2 → Dein Skin und Spielername dürfen die Regeln genauso wenig verletzten, wie dein Profilbild und oder deine Bio.<br>
-          §3 → Bugs sind zu melden und dürfen nicht ausgenutzt werden.<br>
-          §4 → Nach einem PVP- Kampf müssen die Items NICHT zurück gegeben werden.<br>
-        </div>
-        <div class="regeln-block">
-          <b>2.2 Chatverhalten</b><br>
-          §5 → Werbung für andere Server ist in unserem Chat verboten.<br>
-          §6 → Mach keine Werbung für unseren Server auf anderen Servern ohne deren Erlaubnis.<br>
-          §7 → Für private gespräche benutze /tell.<br>
-          §8 → Spamming, Caps, Beleidigung, Trolling, Drohungen oder ähnliches werden weder im öffentlichen chat, noch per tell geduldet.<br>
-        </div>
-        <div class="regeln-block">
-          <b>2.3 Bauregeln</b><br>
-          §9 → Die chatregeln gelten auch für Schilder.<br>
-          §10 → Redstone Clocks sind verboten, es sei denn sie sind manuell abschaltbar. Sie müssen beim Verlassen des Servers ausgeschaltet sein.<br>
-          §11 → Griefen ist untersagt<br>
-          §12 → Spielerfallen sind verboten<br>
-          §13 → Zerstöre bitte nicht die Natur. Zum farmen gibt es eine Farmwelt!<br>
-          §14 → Obszöne oder Rechtsradikale Objekte sind verboten.<br>
-        </div>
-        <div class="regeln-block">
-          <b>2.4 Landes Regeln</b><br>
-          §15 → (Kommen noch)<br>
-        </div>
-        <div style="font-size:0.98rem; color:#888; margin-top:0.5rem;">
-          Dem Team ist es jederzeit vorbehalten, die Regeln zu ändern und es liegt in eigen Verantwortung darauf zu achten und die Regeln regelmäßig zu lesen.<br>
-          Unwissenheit schützt vor Strafe nicht! <br>
-          *Du stimmst automatisch dem Regelwerk zu wenn du den Server betrittst.
+          <b>Regelwerk</b><br><br>
+          <b>1. Allgemeines</b><br>
+          §1.1 →  Anweisungen vom Serverteam sind Folge zu leisten! Blockieren oder Ignorieren ist keine Option.<br>
+          §1.2 →  Zweitaccounts sind nur für die Nutzung einer Webcam erlaubt.<br>
+          §1.3 →  Unpingbare Zeichen, obszönes, pornographisches, Rassistisches, Religion feindliches, Homophobes oder Sexistisches Verhalten sowie Profilbilder oder Bios sind untersagt.<br>
+          §1.4 →  Das Werben für andere Discord Server oder Plattformen im Benutzernamen, Profilbildern ist verboten.<br>
+          §1.5 →  Private Daten wie Telefonnummern, Adressen, Passwörter und Ähnlichem dürfen nicht öffentlich ausgetauscht werden. (Ein Serverteammitglied wird dich niemals nach sensiblen Daten fragen.)<br>
+          §1.6 →  Jeder Hack- und/oder DDoS-Angriff gegen diesen Server ist strafbar und wird strafrechtlich verfolgt.<br>
+          §1.7 →  Trolling jeglicher Art ist verboten.<br>
+          §1.8 →  Beim Betreten eines Discord talks erteilt man automatisch das Einverständnis zur Aufnahme von Ton.<br>
+          §1.9 →  Serverhetze ist strengstens verboten.<br>
+          §1.10 → Sich selbst als eine andere Person oder Teammitglied auszugeben ist untersagt.<br><br>
+          <b>2. Voicechannel</b><br>
+          §2.1 → Störung der Kommunikation, Belästigung und jegliches Bedrohen von Nutzern ist untersagt.<br>
+          §2.2 → Das Abspielen von Musik (außer mit dem dafür vorgesehenem Bot) und Geräuschen ist untersagt.<br>
+          §2.3 → Das dauerhafte "Switchen" von Channel zu Channel ist untersagt (Channelhopping)!<br>
+          §2.4 → Das Aufzeichnen von Supportgesprächen ist verboten und kann Strafrechtlich verfolgt werden!<br><br>
+          <b>3. Support Tickets</b><br>
+          §3.1 → Das pingen von Teamlern ist untersagt!<br>
+          §3.2 → Das öffnen eines Tickets ist ohne triftigen Grund zu unterlassen.<br>
+          §3.3 → Private Angelegenheiten sollten nicht in ein Ticket eingebracht werden.<br>
+          §3.4 → Entbannungsanträge können nach hälfte der Zeit gestellt werden.<br>
+          §3.4.1 → Bei einem Perma Ban nach einem Monat.<br><br>
+          <b>Ingame Regeln / Spielverhalten</b><br><br>
+          <b>4. Bauregeln</b><br>
+          §4.1 → Redstone Clocks sind verboten, es sei denn sie sind manuell abschaltbar. Sie müssen beim Verlassen des Servers ausgeschaltet sein.<br>
+          §4.2 → Griefen ist untersagt.<br>
+          §4.3 → Spielerfallen sind verboten.<br>
+          §4.4 → Zerstöre bitte nicht die Natur. Zum farmen gibt es eine Farmwelt!<br>
+          §4.5 → Obszöne oder Rechtsradikale Objekte sind verboten.<br>
+          §4.6 → Dein Land darf nicht neben einem anderen Land geclaimt werden.<br>
+          §4.7 → Das Bauen von Dupern jeglicher Art (auch TNT Duper) ist verboten.<br>
+          §4.8 → Chunkloader sind verboten.<br><br>
+          <b>5. PVP - Regeln</b><br>
+          §5.1 → Nach einem PVP- Kampf müssen die Items NICHT zurück gegeben werden.<br>
+          §5.2 → Neue Spieler dürfen nicht getötet werden.<br>
+          §5.3 → Bis zu einer Minute nach einer TPA darf ein Spieler nicht getötet werden.<br>
+          §5.4 → Dauerhaftes töten von Spielern ist verboten.<br><br>
+          <b>6. Chatverhalten</b><br>
+          §6.1 → Spamming, Caps, Beleidigung, Trolling, Drohungen oder ähnliches werden weder im öffentlichen chat, noch per tell geduldet.<br>
+          §6.2 → Für private gespräche benutze /tell.<br>
+          §6.3 → Die chatregeln gelten auch für Schilder.<br>
+          §6.4 → Werbung für andere Server ist in unserem Chat verboten.<br><br>
+          <b>7. Clientmodifikationen</b><br>
+          <i>Die Nutzung von Clients und Mods sind unter folgenden Umständen erlaubt:</i><br>
+          §7.1 → Das Nutzen von Mods und Hacks, die dir einen Spielvorteil gegenüber anderen Mitspielern verschaffen, ist verboten! (X-Ray, Fly, Fullbright, usw).<br>
+          §7.2 → Autobuild - Funktionen sind verboten.<br>
+          §7.3 → X-Ray und ähnliches ist verboten. (Das nutzen von Bugs etc um durch Wände zu sehen).<br>
+          §7.4 → Replay Mod und Freecam sind nur zur Nutzung von Aufnahmen erlaubt.<br>
+          §7.5 → Autoklicker sind untersagt.<br>
+          §7.6 → Modifikationen die zum automatischen rejoinen dienen sind verboten.<br><br>
+          <b>8. Sonstiges</b><br>
+          §8.1 → Das Umgehen des AFK – Systems auf jegliche Art ist verboten.<br>
+          §8.2 → Die Nutzung von Zweitaccounts ist nicht gestattet.<br>
+          §8.3 → Bugs sind zu melden und dürfen nicht ausgenutzt werden.<br>
+          §8.4 → Mach keine Werbung für unseren Server auf anderen Servern ohne deren Erlaubnis.<br>
+          §8.5 → Das joinen mit unangebrachten Namen / skins ist verboten.<br>
+          §8.6 → Das Klauen von Items ist verboten.<br>
+          §8.7 → Jegliche Art von Echtgeld Handel ist verboten.<br>
+          §8.8 → Das Schaden der Serverwirtschaft (Durch dupen, das in Umlauf bringen von hohen Geld summen etc) ist strengstens untersagt!<br>
+          §8.9 → Das Ausnutzen von Grauzonen wird nicht geduldet. Das letzte Wort hat immer das Team.<br><br>
+          <span style="font-size:0.98rem; color:#888; margin-top:0.5rem; display:block;">
+            Dem Serverteam ist es jederzeit vorbehalten, die Regeln zu ändern und es liegt in eigen Verantwortung darauf zu achten und die Regeln regelmäßig zu lesen.<br>
+            Unwissenheit schützt vor Strafe nicht!
+          </span>
         </div>
       </div>
       <div class="infos-box clickable" id="events" tabindex="0"
