--- a/raenge.html
+++ b/raenge.html
@@ -216,7 +216,18 @@
           <span class="rank-img-shine"></span>
         </span>
         <div class="rank-name">Lotus</div>
-        <div class="rank-desc">Beschreibung folgt ...</div>
+         <div style="color: #a259e6; font-size: 1.08rem; font-weight: 700; margin-bottom: 0.5rem; letter-spacing: 0.03em; text-shadow: 0 2px 8px #a259e633;">
+          Der erste Schritt zum Ruhm
+        </div>
+        <div class="rank-desc">
+              Preis: 250.000 <br>
+              <span style="display: inline-flex; align-items: center; gap: 0.5em;">
+                <span style="color: #ffd700; font-size: 1.1em;">&#9733;</span>
+                <span style="font-weight: 700; color: #2196f3;">30 Tage</span>
+                <span style="color: #ffd700; font-size: 1.1em;">&#9733;</span>
+              </span><br>
+              Das ist drinn:<br>
+              Beschreibung folgt ...</div>
       </div>
       <div class="rank-box viper">
         <span class="rank-box-glitter">
@@ -227,7 +238,18 @@
           <span class="rank-img-shine"></span>
         </span>
         <div class="rank-name">Viper</div>
-        <div class="rank-desc">Beschreibung folgt ...</div>
+        <div style="color: #5bea14; font-size: 1.08rem; font-weight: 700; margin-bottom: 0.5rem; letter-spacing: 0.03em; text-shadow: 0 2px 8px #a259e633;">
+          Schlängel dich an die Spitze
+        </div>
+        <div class="rank-desc">
+              Preis: 950.000 <br>
+              <span style="display: inline-flex; align-items: center; gap: 0.5em;">
+                <span style="color: #ffd700; font-size: 1.1em;">&#9733;</span>
+                <span style="font-weight: 700; color: #2196f3;">Permanent</span>
+                <span style="color: #ffd700; font-size: 1.1em;">&#9733;</span>
+              </span><br>
+              Das ist drinn:<br>
+              Beschreibung folgt ...</div>
       </div>
       <div class="rank-box vulkan">
         <span class="rank-box-glitter">
@@ -237,8 +259,19 @@
           <img src="bild/rang/vulkan_rang.png" alt="Vulkan Rang" class="rank-img" />
           <span class="rank-img-shine"></span>
         </span>
-        <div class="rank-name">Vulkan</div>
-        <div class="rank-desc">Beschreibung folgt ...</div>
+        <div class="rank-name">Vulcan</div>
+         <div style="color: #ffc83c; font-size: 1.08rem; font-weight: 700; margin-bottom: 0.5rem; letter-spacing: 0.03em; text-shadow: 0 2px 8px #a259e633;">
+          Lass den Vulcan auf dich niederbrennen!
+        </div>
+        <div class="rank-desc">
+              Preis: 3.000.000 <br>
+              <span style="display: inline-flex; align-items: center; gap: 0.5em;">
+                <span style="color: #ffd700; font-size: 1.1em;">&#9733;</span>
+                <span style="font-weight: 700; color: #2196f3;">Permanent</span>
+                <span style="color: #ffd700; font-size: 1.1em;">&#9733;</span>
+              </span><br>
+              Das ist drinn:<br>
+              Beschreibung folgt ...</div>
       </div>
     </section>
   </main>
