--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <li class="feature-item">🤝 Aktive Community & Team</li>
         <li class="feature-item">🛒 Shops & Wirtschaft</li>
         <li class="feature-item">📚 Guides & Hilfen</li>
-        <li class="feature-item">🌐 Java 1.21</li>
+        <li class="feature-item">🌐 Java 1.21.4</li>
       </ul>
       <div style="margin-top:2rem;">
         <img src="bild/paradi_gunter.png" alt="ParadiseNetwork Screenshot" style="max-width:100%; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
@@ -210,7 +210,7 @@
     <section class="card" style="text-align:center;">
       <h3>Was ist ParadiseNetwork?</h3>
       <p>
-        ParadiseNetwork ist ein deutscher Minecraft Freebuild Server, der am 28. Juni 2025 startet. Unser Ziel: Ein freundlicher, Freebuild Server für alle Minecraft-Fans!  
+        ParadiseNetwork ist ein deutscher Minecraft Freebuild Server, der seit dem 28. Juni 2025 gestartet ist. Unser Ziel: Ein freundlicher, Freebuild Server für alle Minecraft-Fans!  
         <br>
         <a href="ueber-uns.html" class="hero-cta" style="margin-top:1rem;">Mehr erfahren</a>
       </p>
