--- a/infos.html
+++ b/infos.html
@@ -187,7 +187,7 @@
   <main>
     <section class="infos-section">
       <div class="infos-box" id="willkommen">
-        <h2>🌴 Willkommen auf Pasadise Network</h2>
+        <h2>🌴 Willkommen auf Paradise Network</h2>
         <div>
           Hier findest du alles Wissenswerte über unsere Serverstruktur, Regeln und mehr.
         </div>
@@ -326,7 +326,7 @@
             </a>
           </li>
           <li>
-            <a href="mailto:support@paradisenetwork.us" class="hero-cta" style="display:inline-block;min-width:200px;padding:0.7em 1.2em;background:#43a047;color:#fff;border-radius:7px;font-weight:bold;text-align:center;text-decoration:none;">
+            <a href="https://discord.com/channels/1162749568551760002/1267891349588283553" class="hero-cta" style="display:inline-block;min-width:200px;padding:0.7em 1.2em;background:#43a047;color:#fff;border-radius:7px;font-weight:bold;text-align:center;text-decoration:none;">
               Support Mail
             </a>
           </li>
