--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -275,17 +275,24 @@
         </div>
         
         <div class="team-member">
-          <img src="bild/team/pfeiltasten.png" alt="Pfeiltasten">
+          <img src="bild/team/pfeiltasten.png" alt="marvin">
           <h3>Pfeiltasten</h3>
+          <div class="role">Sr.Developer</div>
+          <p>Text folgt...</p>
+        </div>
+
+        <div class="team-member">
+          <img src="bild/team/marvin" alt="Marvin">
+          <h3>Marvin</h3>
           <div class="role">Developer</div>
           <p>Text folgt...</p>
         </div>
 
         <div class="team-member">
-          <img src="bild/team/olfialex.png" alt="OlfiAlex">
-          <h3>OlfiAlex</h3>
-          <div class="role">T-Developer</div>
-          <p>Text folgt...</p>
+          <img src="bild/team/coro.png" alt="Corotexus_YT">
+          <h3>Corotexus_YT</h3>
+          <div class="role">Moderator</div>
+          <p><i>"Heyho ich bin Coro. 1999 gespawnt und stehts Multidimensional unterwegs. Immer wieder für gute Geschichten und Gaming zu haben."</i></p>
         </div>
 
         <div class="team-member">
@@ -295,12 +302,29 @@
           <p>Text folgt...</p>
         </div>
 
+      
+
         <div class="team-member">
-          <img src="bild/team/coro.png" alt="Corotexus_YT">
-          <h3>Corotexus_YT</h3>
-          <div class="role">Supporter</div>
-          <p><i>"Heyho ich bin Coro. 1999 gespawnt und stehts Multidimensional unterwegs. Immer wieder für gute Geschichten und Gaming zu haben."</i></p>
+          <img src="bild/team/harrystudios.png" alt="HarryStudios">
+          <h3>HaryyStudios</h3>
+          <div class="role">T-Supporter</div>
+          <p><i>"Text folgt..."</i></p>
         </div>
+
+        <div class="team-member">
+          <img src="bild/team/lederhans.png" alt="Lederhans">
+          <h3>Lederhans</h3>
+          <div class="role">Supporter</div>
+          <p><i>"Text folgt..."</i></p>
+        </div>
+
+         <div class="team-member">
+          <img src="bild/team/PocketTank2002.png" alt="PocketTank2002">
+          <h3>PocketTank2002</h3>
+          <div class="role">Builder</div>
+          <p><i>"Text folgt..."</i></p>
+        </div>
+
     </section>
     <!-- ...weitere Abschnitte wie Geschichte, Werte etc... -->
     <section class="card" style="cursor:pointer;" onclick="window.location.href='geschichte.html'" tabindex="0" onkeydown="if(event.key==='Enter'){window.location.href='geschichte.html'}">
