Update 2.0 Info: Pasadise berichtigt Regeln: aktuallisiert
Über uns
Team: coro moderator
Marvin developer,
harry Team T-Supporter,
Pocket Tank builder,
Lederhans Supporter,

Content Creator: LeandOst entfernt

Startseite ganz unten "Seit" statt "am"

Version mit genauer .4 Angabe

- Statt Supportmail Ticket Channel hinzufügen

--- a/infos.html
+++ b/infos.html
@@ -280,10 +280,17 @@
           §8.6 → Das Klauen von Items ist verboten.<br>
           §8.7 → Jegliche Art von Echtgeld Handel ist verboten.<br>
           §8.8 → Das Schaden der Serverwirtschaft (Durch dupen, das in Umlauf bringen von hohen Geld summen etc) ist strengstens untersagt!<br>
-          §8.9 → Das Ausnutzen von Grauzonen wird nicht geduldet. Das letzte Wort hat immer das Team.<br><br>
+          §8.9 → Das Ausnutzen von Grauzonen wird nicht geduldet. Das letzte Wort hat immer das Team.<br>
+          §8.10 → Das vergeben und verkaufen von Rang Keys an Spieler ohne entsprechenden Rang ist verboten. Nicht einhalten wird mit einem Ban bestraft!<br><br>
           <span style="font-size:0.98rem; color:#888; margin-top:0.5rem; display:block;">
-            Dem Serverteam ist es jederzeit vorbehalten, die Regeln zu ändern und es liegt in eigen Verantwortung darauf zu achten und die Regeln regelmäßig zu lesen.<br>
-            Unwissenheit schützt vor Strafe nicht!
+            Dem <b>Paradise Team</b> ist es jederzeit vorbehalten, die Regeln zu ändern und es liegt in eigen Verantwortung darauf zu achten und die Regeln regelmäßig zu lesen.<br>
+            Unwissenheit schützt vor Strafe nicht! Stimme den Regeln in unserem <a href="https://discord.gg/qsM4tbsKv4" target="_blank">Discord</a> zu, um alle Kanäle zu sehen.<br><br>
+            <b>Um dich dort auch für den Ingamechat frei zu schalten, einmal folgendes tun:</b><br>
+            1. Ingame joinen<br>
+            2. gib <i>/discord link</i> in den chat ein<br> 
+            3. Gehe auf den Discord server<br>
+            4. schreibe <b>@SRV</b> in einer Privatnachricht den angezeigten code NUR DEN CODE (der code sollte ingame ich chat stehen)<br>
+            5. Dein Discord Server Profil ist nun mit dem Minecraft Profil verknüpft, du solltest nun die Rolle haben die du auch auf ParadiseNetwor.us hast.
           </span>
         </div>
       </div>
