--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -312,7 +312,7 @@
         <div class="team-member">
           <img src="bild/team/harrystudios.png" alt="HarryStudios">
           <h3>HaryyStudios</h3>
-          <div class="role">T-Supporter</div>
+          <div class="role">Supporter</div>
           <p><i>"Text folgt..."</i></p>
         </div>
 
