--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -303,14 +303,14 @@
         </div>
 
        <div class="team-member">
-          <img src="bild/team/lederhans.png" alt="Lederhans">
+          <img src="bild/team/Lederhans.png" alt="Lederhans">
           <h3>Lederhans</h3>
           <div class="role">Supporter</div>
           <p><i>"Text folgt..."</i></p>
         </div>
 
         <div class="team-member">
-          <img src="bild/team/harrystudios.png" alt="HarryStudios">
+          <img src="bild/team/HarryStudios.png" alt="HarryStudios">
           <h3>HaryyStudios</h3>
           <div class="role">Supporter</div>
           <p><i>"Text folgt..."</i></p>
