FBU2 Pasadise Bug

--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -235,7 +235,7 @@
       </div>
       <div class="about-info-box community">
         <b>🧑‍🤝‍🧑 Unsere Community</b><br>
-        Was Pasadise wirklich besonders macht, sind die Menschen, die hier spielen. Unsere Community besteht aus Spielern verschiedenster Altersgruppen, die gemeinsam bauen, Ideen teilen und sich gegenseitig helfen. Neue Spieler werden herzlich aufgenommen, und respektvoller Umgang ist für uns selbstverständlich.<br>
+        Was Paradise wirklich besonders macht, sind die Menschen, die hier spielen. Unsere Community besteht aus Spielern verschiedenster Altersgruppen, die gemeinsam bauen, Ideen teilen und sich gegenseitig helfen. Neue Spieler werden herzlich aufgenommen, und respektvoller Umgang ist für uns selbstverständlich.<br>
         <br>
         Wir fördern freundliche Interaktion, Zusammenarbeit bei Bauprojekten und Eigeninitiative. Wer Lust hat, kann sich aktiv einbringen – zum Beispiel durch Community-Events, Stadtprojekte oder Feedbackrunden.
       </div>
